Reformat OJS submission fetcher test